# etl_mssql_oracle

./: .env.example  .gitignore  README.md  WINDOWS_SETUP.md  main_refactored.py  pyproject.toml  requirements.txt  verify_fix.md
config/: tables_config.yaml
sql/: duckdb_join_cases_customers.sql  mssql_read_cases_custom.sql  mssql_read_table.sql  oracle_create_data_quality_table.sql  oracle_create_foreign_key.sql  oracle_create_index.sql  oracle_create_table.sql  oracle_drop_table.sql  oracle_insert_table.sql
src/config/: manager.py
src/connections/: base.py  mssql.py  oracle.py
src/dependency/: resolver.py
src/mappers/: data_types.py
src/quality/: __init__.py  checker.py
src/transfer/: engine.py
src/utils/: exceptions.py  logging.py
