[project]
name = "etl_mssql_oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "oracledb>=2.0.0",
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "pyarrow>=10.0.0",
    "pymssql>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typing-extensions>=4.0.0",
    "pyodbc>=5.2.0",
]
